# enrichment-etl

./: .env.example  .gitignore  README.md  pyproject.toml
data/input/: candidate_take_home.xlsx
docs/: cloud_orchestration.md
src/: brightdata.py  config.py  db.py  fetch.py  main.py  parse_crunchbase.py  parse_linkedin.py  reconcile.py  utils.py
